2023-08-23T16:08:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5953767250 # 1844
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-23
* notice: last 14d: unq all: 12 35
* notice: prev accum: outdated-unq outdated-all / unq all: 342 1443 / 354 1495
* notice: next accum: outdated-unq outdated-all / unq all: 343 1461 / 355 1496
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2023-08-09] / [2023-08-23]

2023-08-23T08:08:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5948709217 # 1843
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-23
* notice: last 14d: unq all: 12 52
* notice: prev accum: outdated-unq outdated-all / unq all: 342 1443 / 353 1492
* notice: next accum: outdated-unq outdated-all / unq all: 342 1443 / 354 1495
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-08-23]

2023-08-22T16:08:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5941309521 # 1841
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-22
* notice: last 14d: unq all: 11 49
* notice: prev accum: outdated-unq outdated-all / unq all: 341 1433 / 353 1492
* notice: next accum: outdated-unq outdated-all / unq all: 342 1443 / 353 1492
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-08] / []

2023-08-22T00:31:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5932928593 # 1839