@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-23T16:08:13Z",
+  "timestamp" : "2023-08-25T00:31:54Z",
   "count_outdated" : 1461,
   "uniques_outdated" : 343,
-  "count" : 1496,
-  "uniques" : 355,
+  "count" : 1507,
+  "uniques" : 356,
   "views" : [
     {
       "timestamp": "2023-08-11T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-24T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
