@@ -1,6 +1,6 @@
 {
-  "count": 35,
-  "uniques": 12,
+  "count": 46,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2023-08-11T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2023-08-23T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-08-24T00:00:00Z",
+      "count": 11,
+      "uniques": 1
     }
   ]
 }
