@@ -1,3 +1,12 @@
+2023-08-25T00:31:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5970363179 # 1848
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-25
+* notice: last 14d: unq all: 13 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 343 1461 / 355 1496
+* notice: next accum: outdated-unq outdated-all / unq all: 343 1461 / 356 1507
+* notice: prev exec diff / last date diff / accum: unq all: +1 +11 -0 -0 / +1 +11 -0 -0 / 1 11
+* notice: removed / changed dates: [] / [2023-08-24]
+
 2023-08-23T16:08:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5953767250 # 1844
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-23
